HW2/HW2_vivado/HW2_vivado.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Hello_world_bsp_xtmrctr_intr_example_1.build.log
05:33:46 **** Incremental Build of configuration Debug for project Hello_world_bsp_xtmrctr_intr_example_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/xtmrctr_intr_example.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xtmrctr_intr_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Hello_world_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xtmrctr_intr_example.d" -MT"src/xtmrctr_intr_example.o" -o "src/xtmrctr_intr_example.o" "../src/xtmrctr_intr_example.c"
../src/xtmrctr_intr_example.c: In function 'main':
../src/xtmrctr_intr_example.c:88:29: error: 'XPAR_INTC_0_TMRCTR_0_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_TMRCTR_0_DEVICE_ID'?
 #define TMRCTR_INTERRUPT_ID XPAR_INTC_0_TMRCTR_0_VEC_ID
                             ^
../src/xtmrctr_intr_example.c:185:7: note: in expansion of macro 'TMRCTR_INTERRUPT_ID'
       TMRCTR_INTERRUPT_ID,
       ^~~~~~~~~~~~~~~~~~~
../src/xtmrctr_intr_example.c:88:29: note: each undeclared identifier is reported only once for each function it appears in
 #define TMRCTR_INTERRUPT_ID XPAR_INTC_0_TMRCTR_0_VEC_ID
                             ^
../src/xtmrctr_intr_example.c:185:7: note: in expansion of macro 'TMRCTR_INTERRUPT_ID'
       TMRCTR_INTERRUPT_ID,
       ^~~~~~~~~~~~~~~~~~~
make: *** [src/xtmrctr_intr_example.o] ¿À·ù 1

05:33:46 Build Finished (took 481ms)

